src/objects/PI_Param__c.object
<CustomObject>
    <fields>
        <fullName>Commercial__c</fullName>
        <label>Commercial</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Delivery__c</fullName>
        <label>Delivery</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Innovation__c</fullName>
        <label>Innovation</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Quality__c</fullName>
        <label>Quality</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Relationship__c</fullName>
        <label>Relationship</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Supplier_Name__c</fullName>
        <label>Supplier Name</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>PI Params</relationshipLabel>
        <relationshipName>PI_Params</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Sustainability__c</fullName>
        <label>Sustainability</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <label>PI Param</label>
    <nameField>
        <displayFormat>PI Param - {0}</displayFormat>
        <label>PI Param ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>PI Params</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>